[package]
name = "tentative-title"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-plugin = { path = "../board_plugin" }

bevy = { workspace = true }
bevy-inspector-egui = { version = "0.24.0", optional = true }

[features]
default = []
debug = ["board-plugin/debug", "bevy-inspector-egui"]
